# net-meter

./: .gitignore  CLAUDE.md  CODEX-TEST.md  README.md
config/: external-port.runtime.yaml  loopback.runtime.yaml  namespace.runtime.yaml
docs/: IMPROVEMENTS.md  MODE.md  PROCESS.md  SCHEMA.md  TODO.md  design-next.md
docs/schema/: Association.schema.json  ClientDef.schema.json  HistogramBucket.schema.json  HttpMethod.schema.json  HttpPayload.schema.json  LoadConfig.schema.json  MetricsSnapshot.schema.json  NetworkMode.schema.json  PayloadProfile.schema.json  PerProtocolSnapshot.schema.json  Protocol.schema.json  RuntimeConfig.schema.json  ServerDef.schema.json  TcpOptions.schema.json  TcpPayload.schema.json  TestConfig.schema.json  TestEventType.schema.json  TestResult.schema.json  TestState.schema.json  TestStatus.schema.json  TestType.schema.json  Thresholds.schema.json  VlanConfig.schema.json  VlanProto.schema.json
engine/: Cargo.toml  rust-toolchain.toml
engine/crates/control/: Cargo.toml
engine/crates/control/src/: event.rs  main.rs  orchestrator.rs  result.rs  runtime.rs  schema.rs  state.rs  tls.rs
engine/crates/control/src/api/: events.rs  health.rs  metrics.rs  mod.rs  profiles.rs  results.rs  test.rs
engine/crates/control/static/: index.html
engine/crates/control/static/assets/: index-BMMVwjQz.js  index-BMmMinSk.js  index-BSBeuRwm.js  index-BXdIRRzX.js  index-BYFpE-3a.css  index-Bj2WXgHo.css  index-BoX7SVGX.js  index-BunTpftQ.js  index-C79oVeeK.css  index-CIFu4igY.css  index-CinGJZz2.js  index-CuR5lIrR.js  index-D1NrH7Gb.css  index-DA7svRpL.js  index-DVtBBI0r.js  index-Dd6rn_Am.js  index-DpbLPLH2.js  index-DzsLq1dM.js  index-Hy7GPS_W.js  index-RRQwKbOY.js  index-Ur6OTJHX.css  index-mbnEdQYs.js  index-ojDnyMnY.css  index-y_5JaWI1.js  style-BrsV9oY-.css
engine/crates/core/: Cargo.toml
engine/crates/core/src/: config.rs  error.rs  lib.rs  profile.rs  snapshot.rs  state.rs
engine/crates/generator/: Cargo.toml
engine/crates/generator/src/: common.rs  http1.rs  http2.rs  lib.rs  tcp.rs
engine/crates/metrics/: Cargo.toml
engine/crates/metrics/src/: aggregator.rs  collector.rs  lib.rs
engine/crates/ns/: Cargo.toml
engine/crates/ns/src/: lib.rs  manager.rs  port.rs  setns.rs  veth.rs
engine/crates/responder/: Cargo.toml
engine/crates/responder/src/: lib.rs  tcp.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  generated.ts
frontend/src/components/: Dashboard.tsx  EventLog.tsx  MetricsPanel.tsx  ProfileManager.tsx  Results.tsx  TestControl.tsx  TestRunPanel.tsx  TopologyView.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  input.tsx  label.tsx  switch.tsx
frontend/src/lib/: theme.tsx
frontend/src/store/: testStore.ts
old_docs/: IMPROVEMENTS.md  MODE.md  PROCESS.md  TODO.md  design-next.md
scripts/: build.sh  generate-schema.sh  run-dev.sh  run.sh  setup.sh
scripts/testbed/: extport-docker-dut.sh  ns-bridge-testbed.sh
testbed/: topology.md
testbed/docker-dut/: docker-compose.yml  setup.sh  teardown.sh
testbed/docker-dut/dut/: Dockerfile  entrypoint.sh
testbed/veth-dut/: setup.sh  teardown.sh
