[package]
name = "net-meter-control"
version.workspace = true
edition.workspace = true

[[bin]]
name = "net-meter"
path = "src/main.rs"

[[bin]]
name = "generate-schema"
path = "src/bin/generate_schema.rs"

[[bin]]
name = "net-meter-cli"
path = "src/bin/net_meter_cli.rs"

[dependencies]
net-meter-core      = { workspace = true }
net-meter-metrics   = { workspace = true }
net-meter-ns        = { workspace = true }
net-meter-generator = { workspace = true }
net-meter-responder = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
socket2 = { workspace = true }
async-stream = { workspace = true }
futures-core = "0.3"
rustls = { workspace = true }
rcgen = { workspace = true }
tokio-rustls = { workspace = true }
