[package]
name = "net-meter-generator"
version.workspace = true
edition.workspace = true

[dependencies]
net-meter-core    = { workspace = true }
net-meter-metrics = { workspace = true }
net-meter-ns      = { workspace = true }
tokio = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
h2 = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
